# yxh_USTC_CG_2024

Framework2D/include/view/: comp_canvas.h
Framework2D/include/view/shapes/: line.h  rect.h  shape.h
Framework2D/src/assignments/1_MiniDraw/: window_minidraw.cpp
Framework2D/src/assignments/2_ImageWarping/: CMakeLists.txt  comp_warping.cpp  comp_warping.h  window_warping.cpp
Framework2D/src/assignments/3_PoissonImageEditing/: comp_source_image.cpp  comp_source_image.h  comp_target_image.cpp  comp_target_image.h  window_poisson.cpp
Framework2D/src/view/: comp_canvas.cpp
Framework2D/src/view/shapes/: line.cpp  rect.cpp
Homeworks/0_cpp_warmup/project/src/executables/1_BasicDArray/: DArray.cpp
Homeworks/0_cpp_warmup/project/src/executables/2_EfficientDArray/: DArray.cpp
